# anatole

./: DEPLOY_V0_2.md  DEPLOY_V0_3.md  DEPLOY_V0_4.md  DEPLOY_V0_4_1.md  DEPLOY_V0_5.md  Dockerfile  ETF_CATALOGUE_172.csv  INSTALLATION.md  IPO_PRICES_V0_5_2.md  NAVIGATION_ACTIVATION.md  PATCH_CONTENTS.md  PATCH_NOTES.md  README.md  SIDEBAR_FIX_V0_5_1.txt  UPLOAD_INSTRUCTIONS.txt  VALIDATION_ANATOLE_PLATFORM_V0_1.md  VALIDATION_ANATOLE_PLATFORM_V0_4.md  VALIDATION_ANATOLE_PLATFORM_V0_5.md  anatole-news.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/core/: config.py
apps/api/app/data/: __init__.py  etf_catalog.py
apps/api/app/schemas/: discovery.py  etf_history.py  etf_holdings.py  fundamentals.py  ipo_insiders.py  market.py
apps/api/app/services/: anatole-calendar.py  anatole-news-with-statcan-relay.py  calendar.py  cockpit.py  etf.py  etf_history.py  etf_holdings.py  fundamentals.py  ipo.py  (+16 more)
apps/api/tests/: test_cockpit.py  test_discovery.py  test_etf_catalog.py  test_etf_history.py  test_etf_holdings.py  test_etf_live_treemap.py  test_etf_service_snapshot.py  test_fundamentals.py  test_fundamentals_results_v2.py  test_health.py  test_insiders_service.py  test_ipo_service.py  test_issuer_document_discovery.py  test_issuer_document_parser.py  test_issuer_document_xlsx.py  test_news_service.py  test_official_financials_merge.py  test_sec_edgar_financials.py  test_stocks.py  test_yahoo_statements.py  test_yahoo_statements_priority.py
(+99 files in other folders)
